test/ui/test/metadata/unexpected-key-in-list.stderr
error: found ‘:’ but expected ‘,’
 --> ${TEST_FOLDER}/metadata/unexpected-key-in-list.metadata:3:13
  |
3 | list: [first: 0, second: 2]
  |             ^
  |

error: aborting due to previous error

