test/ui/test/metadata/unexpected-key-in-list.metadata
# TEST fail metadata

list: [first: 0, second: 2]
